# prophet-secretary-through-blind-strategies

./: INPUT.md  README.md  README.tex.md
improved lower bound/: DetailedPerformance.m  README.md  Script.m  detailed_performance.py  script.py
improved lower bound/rust-solver/: .gitignore  Cargo.toml
improved lower bound/rust-solver/src/: main.rs
lower bound/: Kfactor.m  README.md  Script.m  computeCoefficient.m  myOdeSolver.m
upper bound/: README.md  Script - Single ODE.m  Script.m  TraslationFactors.m  myOdeSolver.m
