[package]
name = "rust-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argmin = { version = "0.8", features = ["ctrlc"]}
cobyla = "0.3"
num-traits = "0.2.15"
ordered-float = "3.7"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
simulated_annealing = "0.2.1"
